k8s-resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: leaq
  annotations:
    kubernetes.io/ingress.class: nginx-2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/limit-connections: "5"
    nginx.ingress.kubernetes.io/limit-rpm: "180"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - leaq.ru
        - api.leaq.ru
        - admin-bot.leaq.ru
      secretName: leaq-tls
  rules:
    - host: leaq.ru
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 80
    - host: api.leaq.ru
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  number: 80
    - host: admin-bot.leaq.ru
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin-bot
                port:
                  number: 80
