k8s-resources/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: leaq
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - leaq.ru
        - api.leaq.ru
      secretName: leaq-tls
  rules:
    - host: leaq.ru
      http:
        paths:
          - backend:
              serviceName: web
              servicePort: 80
    - host: api.leaq.ru
      http:
        paths:
          - backend:
              serviceName: api
              servicePort: 80
